registration , ship port and dashboard front part

--- a/admin_panel/login.css
+++ b/admin_panel/login.css
@@ -6,6 +6,7 @@
     border: none;
     text-decoration: none;
     font-family: Georgia, 'Times New Roman';
+    text-transform: capitalize;
 }
 .dashboard {
     background-color: #fff;
